--- a/123.md
+++ b/123.md
@@ -1,3 +1,81 @@
-igfisdhghdfgsklfdslgk
-dfg;ldkfgsldfnsg;ns
-f'sgn'slgsdf;\'n
+# Инструкция для работы с Git и удалёнными репозиториями
+
+
+## Что такое Git?
+Git - это одна из реализаций распределённых систем контроля версий, имеющая как и локальные, так и удалённые репозитории. jgjff
+
+## Подготовка репозитория
+Для создание репозитория необходимо выполнить команду git init в папке с репозиторием и у Вас создаться репозиторий (появится скрытая папка .git)
+
+## Основные команды
+
+1. Команда git init
+
+*Создает репозиторий в папке на локальной машине*
+
+2. Команда git status
+
+*Показывает текущее состояние гита, есть ли изменения, которые нужно закоммитить
+(сохранить)*
+
+3. Команда git add
+
+*Добавляет содержимое рабочего каталога в индекс (staging area) для последующего коммита. Эта команда дается после добавления
+файлов. Писать название целиком не обязательно: терминал дозаполнит данные автоматически.*
+
+4. Команда git commit
+
+*зафиксировать или сохранить*
+
+Команда **git commit** берёт все данные, добавленные в индекс с помощью **git add**, и сохраняет их
+слепок во внутренней базе данных, а затем сдвигает указатель текущей ветки на этот слепок.
+
+5. Команда git log
+
+* Журнал изменений
+* Перед переключением версии файла в Git
+используйте команду git log, чтобы увидеть
+количество сохранений
+
+6. Команда git checkout
+
+* Переключение между версиями.
+* Для работы нужно указать не только
+интересующий вас коммит, но и вернуться
+в тот, где работаем, при помощи команды
+**git checkout master**.
+
+7. Команда git diff
+
+*Показывает разницу между текущим файлом
+и сохранённым*
+
+8. Команда git branch
+
+git branch <название новой ветки> создает ветку
+
+9. Команда git merge
+
+Чтобы слить любую ветку с текущей, вызываем
+git merge <имя ветки для слияния с текущей>
+
+10. Удаление веток
+
+git branch -d <имя ветки>
+
+11. Команда git clone
+
+Копировать внешний репозиторий на свой ПК можно командой git clone.
+
+12. Команда git pull
+
+Эта команда позволяет скачать все
+из текущего репозитория и автоматически
+сделать merge с нашей версией.
+
+13. Команда git push
+
+Эта команда позволяет отправить нашу
+версию репозитория на внешний
+репозиторий. ТРЕБУЕТ АВТОРИЗАЦИИ
+на внешнем репозитории.
